Split Dockerfile: deps stage caches JVM + dependencies