@@ -1,16 +1,3 @@
-//> using scala 3.8.3
-//> using jvm 21
-//> using javaOpt --add-exports java.base/jdk.internal.vm=ALL-UNNAMED
-
-//> using dep dev.hnaderi::scala-k8s-http4s::0.31.0
-//> using dep dev.hnaderi::scala-k8s-http4s-ember::0.31.0
-//> using dep dev.hnaderi::scala-k8s-circe::0.31.0
-//> using dep org.http4s::http4s-circe::0.23.36
-//> using dep org.http4s::http4s-ember-server::0.23.36
-//> using dep org.http4s::http4s-dsl::0.23.36
-//> using dep org.typelevel::cats-effect::3.7.0
-//> using dep org.typelevel::cats-effect-direct::1.0.0
-
 import cats.effect.direct.*
 import cats.effect.IO
 import cats.effect.IOApp
